# testopwatch

./: .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  README.md  setup.cfg
src/testopwatch/: __init__.py  _result.py  _runner.py
