[metadata]
name = testopwatch
version = 0.1.0
description = Package for timing your tests.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/programeri-tech/testopwatch
author = Nikola Smiljanic / Andrija Zivkovic
author_email = nikolassmiljanic5@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Programming Language :: Python
    Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir=
    =src
packages = find:
install_requires =
    django>=3.1.4
python_requires = >=3.7

[options.packages.find]
where = src
